# CG-labs

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json
Lab1/: CMakeLists.txt  Makefile  Readme.md  compile_commands.json  main.cpp
Lab1/Report/: main.tex
Lab2/: CMakeLists.txt  Readme.md  main.cpp  main2.cpp
Lab2/Report/: main.tex
Lab2/Report/src/: titlepage.tex
Lab3/: CMakeLists.txt  README.md  main.cpp
Lab3/Report/: main.tex
Lab4/: CMakeLists.txt  README.md  main.cpp
Lab6/: CMakeLists.txt  main.cpp
include/: CONSTANTS.hpp  Camera.hpp  CameraMVP.hpp  DepthFramebuffer.hpp  Framebuffer.hpp  GlobalEvents.hpp  IDrawable.hpp  IMoveable.hpp  IUpdateable.hpp  Line2d.hpp  MoveObjectFN.hpp  Object.hpp  Point2d.hpp  Program.hpp  RigidBody.hpp  Scene.hpp  Shader.hpp  Texture.hpp  Triangle2d.hpp  VertexArray.hpp  VertexBuffer.hpp  customWindow.hpp  events.hpp  geometry.hpp  glCheckError.hpp  glslDataNaming.hpp
include/EventHandlers/: LookupHandler.hpp  moveHandler.hpp
include/Light/: BlinPhongLight.hpp  Fong.hpp  Lambert.hpp  Light.hpp
include/collaiders/: AABB.hpp  CollaiderBase.hpp  Sphere.hpp  intersections.hpp
include/fabrics/: Box.hpp  (+2 more)
include_old/: BezierCurve.hpp  Camera.hpp  IDrawable.hpp  IUpdateable.hpp  Line2d.hpp  Object.hpp  Point2d.hpp  Program.hpp  Scene.hpp  Shader.hpp  Square2d.hpp  Triangle2d.hpp  events.hpp
shaders/: 3.1.2.debug_quad.vs  3.1.2.shadow_mapping.fs  BlinPhong_shadow.glsl  Lab2Shader1(Lambert).glsl  Lab2Shader2(Fong).glsl  Lab2Shader3(Lambert,Simple).glsl  Lab2Shader4(Blinn-Fong).glsl  MVPShader.vsh  blueColor.fsh  depthShader.glsl  greenColor.fsh  modelConstructionShader.vsh  redColor.fsh  simpleShader.vsh  texture2d.fsh  textureAndLight.fsh
src/: Camera.cpp  CameraMVP.cpp  Framebuffer.cpp  IMoveable.cpp  Line2d.cpp  Object.cpp  Point2d.cpp  Program.cpp  RigidBody.cpp  Scene.cpp  Shader.cpp  Texture.cpp  Triangle2d.cpp  VertexArray.cpp  VertexBuffer.cpp  customWindow.cpp  geometry.cpp  glCheckError.cpp
src_old/: BezierCurve.cpp  Camera.cpp  Line2d.cpp  Object.cpp  OldScene.cpp  Point2d.cpp  Program.cpp  Shader.cpp  Square2d.cpp  Triangle2d.cpp
(+45 files in other folders)
